Small amount of Swing UI.  Adding FindBugs to build.  Adding slf4j