@@ -1,7 +1,9 @@
 package org.fife.emu.cpu.n6502;
 
 import java.io.IOException;
+import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
+import java.nio.charset.Charset;
 import java.nio.file.Path;
 
 import org.fife.emu.CpuContext;
@@ -28,7 +30,7 @@ class Debug6502State {
 		this.nes = cpu.getCpuContext();
 		bytes = new int[3];
 		instrs = new InstructionInfo6502();
-		w = new PrintWriter(System.out);
+		w = new PrintWriter(new OutputStreamWriter(System.out, Charset.defaultCharset()));
 	}
 
 
@@ -39,7 +41,7 @@ class Debug6502State {
 
 	private String debugStackInfo() {
 		StringBuilder sb = new StringBuilder("[SP:").append(cpu.getSP());
-		for (int i=0; i<3; i++) {
+		for (int i = 0; i < 3; i++) {
 			sb.append(", ").append(Util.toHex(cpu.peekByte(i)));
 		}
 		return sb.append("]").toString();
@@ -48,8 +50,8 @@ class Debug6502State {
 
 	private String getFlagStateStr() {
 		char[] flags = "nvubdizc".toCharArray();
-		for (int i=0; i<flags.length; i++) {
-			if (cpu.getStatusFlag(flags.length-i-1)>0) {
+		for (int i = 0; i < flags.length; i++) {
+			if (cpu.getStatusFlag(flags.length - i - 1) > 0) {
 				flags[i] = Character.toUpperCase(flags[i]);
 			}
 		}
@@ -60,25 +62,24 @@ class Debug6502State {
 	public void log() throws IOException {
 
 		setInstruction();
-		String inst = instruction!=null ? instruction.toString(bytes, nes) : "???";
+		String inst = instruction != null ? instruction.toString(bytes, nes) : "???";
 
 		String b1 = Util.toHex(bytes[0]);
-		String b2 = bytes[1]<0 ? "  " : Util.toHex(bytes[1]);
-		String b3 = bytes[2]<0 ? "  " : Util.toHex(bytes[2]);
+		String b2 = bytes[1] < 0 ? "  " : Util.toHex(bytes[1]);
+		String b3 = bytes[2] < 0 ? "  " : Util.toHex(bytes[2]);
 		inst = inst + ""; // TODO ...
 //		while (inst.length() < "SEI                        ".length()) {
 //			inst += " ";
 //		}
 
-		w.printf("A:%s X:%s Y:%s S:%s P:%s   $%04X:%s %s %s   %s L=%s %s\n",
-			new Object[] {
-				Util.toHex(cpu.a), Util.toHex(cpu.x), Util.toHex(cpu.y), Util.toHex(cpu.getSP()),
-				getFlagStateStr(),
-				new Integer(pc), b1, b2, b3,
-				debugStackInfo(),
-				"???", //Long.valueOf(((NES)nes).getPpu().getLatchClean()),
-				inst
-		});
+		w.printf("A:%s X:%s Y:%s S:%s P:%s   $%04X:%s %s %s   %s L=%s %s%n",
+			Util.toHex(cpu.a), Util.toHex(cpu.x), Util.toHex(cpu.y), Util.toHex(cpu.getSP()),
+			getFlagStateStr(),
+			pc, b1, b2, b3,
+			debugStackInfo(),
+			"???", //Long.valueOf(((NES)nes).getPpu().getLatchClean()),
+			inst
+		);
 	}
 
 
@@ -90,13 +91,13 @@ class Debug6502State {
 	private void setInstruction() {
 		pc = nes.getCpu().getPC();
 		int inst = nes.readByte(pc);
-		instruction = instrs.get(new Integer(inst));
+		instruction = instrs.get(inst);
 
 		bytes[0] = inst;
 		bytes[1] = bytes[2] = -1;
 		if (instruction != null) {
-			for (int i=1; i<instruction.getByteCount(); i++) {
-				bytes[i] = nes.readByte(pc+i);
+			for (int i = 1; i < instruction.getByteCount(); i++) {
+				bytes[i] = nes.readByte(pc + i);
 			}
 		}
 
@@ -106,10 +107,10 @@ class Debug6502State {
 	public void setLog(Path file) {
 		System.out.println("NOTE: Logging to file: " + file.toFile().getAbsolutePath());
 		try {
-			w = new PrintWriter(file.toFile());
+			w = new PrintWriter(file.toFile(), Charset.defaultCharset().name());
 		} catch (IOException ioe) {
 			ioe.printStackTrace();
-			w = new PrintWriter(System.out);
+			w = new PrintWriter(new OutputStreamWriter(System.out, Charset.defaultCharset()));
 		}
 	}
 
